OSEO build and QA